<resources>
    <string name="app_name">TasksTrackerFragments</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>

    <string name="nameTask">Название</string>
    <string name="descriptionTask">Описание</string>
    <string name="about">About</string>
    <string name="home">home</string>
    <string name="filters_and_sort">Фильтры и сортировки</string>
    <string name="sort">Количество выполнений:</string>
    <string name="top">Top</string>
    <string name="find">Find</string>
    <string name="name_task">Название привычки</string>
    <string name="bottom">Bottom</string>

    <string-array name="types">
        <item>Нет</item>
        <item>Высокий</item>
        <item>Средний</item>
        <item>Низкий</item>
    </string-array>
</resources>