<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:textSize="20sp"
            android:id="@+id/text_view_bottom"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp" />

        <Button
            android:id="@+id/sort_top"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/top"
            android:textSize="10sp"
            android:layout_marginRight="5dp"
            tools:ignore="SmallSp"
            android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/sort_bottom"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/bottom"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp">
        <EditText
            android:id="@+id/task_name_find"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/name_task"
            android:layout_weight="0.75"/>

        <Button
            android:id="@+id/find_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/find"
            android:textSize="10sp"
            tools:ignore="SmallSp"/>
    </LinearLayout>

</LinearLayout>